--- a/170516/Views/Administrator/AddProduct.cshtml
+++ b/170516/Views/Administrator/AddProduct.cshtml
@@ -8,9 +8,9 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="btn-group pull-right m-t-5 m-b-20">
-                <a href="@Url.Action("AddProduct","Administrator")" class="btn btn-custom dropdown-toggle waves-effect waves-light">Thêm sản phẩm <span class="m-l-5"><i class="fa fa-plus"></i></span></a>
+                
             </div>
-            <h4 class="page-title">Quản lý sản phẩm</h4>
+            <h4 class="page-title">Thêm sản phẩm mới</h4>
         </div>
     </div>
 
