--- a/170516/Views/Administrator/ViewSupplierDetails.cshtml
+++ b/170516/Views/Administrator/ViewSupplierDetails.cshtml
@@ -5,91 +5,91 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="main-content-wrapper">
-            <div class="panel-heading">
-                @*nav bar*@
-                <ol class="breadcrumb">
-                    <li><a href="@Url.Action("ViewSupplier","Administrator")">Quản lý nhà cung cấp</a></li>
-                    <li class="active">Chi tiết nhà cung cấp</li>
-                </ol>
-                <div class="container-fluid admin-header">
-                    <div class="title col-md-6 col-xs-6"><h3>@Model.CompanyName</h3></div>
-                </div>
+<div class="container">
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="btn-group pull-right m-t-5 m-b-20">
+                @*<button type="button" class="btn btn-custom dropdown-toggle waves-effect waves-light" data-toggle="dropdown" aria-expanded="false">Thêm sản phẩm <span class="m-l-5"><i class="fa fa-plus"></i></span></button>*@
             </div>
-            <div class="container-fluid">
+            <h4 class="page-title">@Model.CompanyName</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card-box">
                 <div class="form-horizontal">
                     <div class="row">
                         <div class="col-md-8 col-lg-8 detail-view">
                             @Html.HiddenFor(model => model.SupplierID)
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="CompanyName">Tên công ty <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="CompanyName">Tên công ty  </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@Model.CompanyName</p>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="ContactLName">Họ người liên lạc<span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="ContactLName">Họ người liên lạc </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@string.Format("{0} {1}", Model.ContactLName, Model.ContactLName)</p>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="ContactFName">Tên người liên lạc<span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="ContactFName">Tên người liên lạc </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@string.Format("{0} {1}", Model.ContactFName, Model.ContactFName)</p>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Address1">Địa chỉ 1 <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Address1">Địa chỉ 1  </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@Model.Address1</p>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Address2">Địa chỉ 2 <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Address2">Địa chỉ 2  </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@Model.Address2</p>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="City">Tỉnh/Thành phố <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="City">Tỉnh/Thành phố  </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@Model.City</p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Phone">Số điện thoại <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Phone">Số điện thoại  </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@Model.Phone</p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Fax">Fax <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Fax">Fax  </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@Model.Fax</p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="EmailAddress">Địa chỉ email <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="EmailAddress">Địa chỉ email  </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@Model.EmailAddress</p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Discount">Giảm giá <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="Discount">Giảm giá  </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@Model.Discount</p>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label class="col-sm-3 control-label" for="ProductType">Loại sản phẩm <span class="text-danger">*</span></label>
+                                <label class="col-sm-3 control-label" for="ProductType">Loại sản phẩm  </label>
                                 <div class="col-sm-7">
                                     <p class="info-box">@Model.ProductType</p>
                                 </div>
@@ -119,6 +119,7 @@
         </div>
     </div>
 </div>
+
 @section Scripts
 {
     <script src="@Url.Content("~/Scripts/Admin/supplier.js")"></script>
