--- a/170516/Views/Administrator/AddEmailTemplate.cshtml
+++ b/170516/Views/Administrator/AddEmailTemplate.cshtml
@@ -4,19 +4,19 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="main-content-wrapper">
-            <div class="panel-heading">
-                <ol class="breadcrumb">
-                    <li><a href="@Url.Action("ViewEmailTemplate","Administrator")">Quản lý mẫu email</a></li>
-                    <li class="active">Thêm mẫu email</li>
-                </ol>
-                <div class="container-fluid admin-header">
-                    <div class="title col-md-6 col-xs-6"><h3>Thêm mẫu email</h3></div>
-                </div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="btn-group pull-right m-t-5 m-b-20">
+
             </div>
-            <div class="container-fluid">
+            <h4 class="page-title">Tạo mẫu email mới</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card-box">
                 @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "addEmailTemplateForm" }))
                 {
                     <div class="form-horizontal">
@@ -36,7 +36,7 @@
                                         @Html.ValidationMessageFor(model => model.EmailSubject, null, new { @class = "input-error-box text-danger" })
                                     </div>
                                 </div>
-                                
+
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label" for="">Từ khóa</label>
                                     <div class="col-sm-9">
@@ -45,16 +45,16 @@
                                             <label class="label label-success merge-item">@item</label>
                                         }
                                     </div>
-                                </div>                                
-                               
+                                </div>
+
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label" for="">Nội dung<span class="text-danger">*</span></label>
                                     <div class="col-sm-9">
                                         <div id="emailTemplate-area-html">
                                             @Html.TextAreaFor(model => model.HtmlTextContent, new { @class = "tiny_mce_input form-control", @id = "txtA_htmlVersion", @style = "height:250px", maxlength = 5000 })
                                             @Html.ValidationMessageFor(model => model.HtmlTextContent)
-                                        </div>                                                                        
-                                    </div>                                    
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <div class="col-sm-2"></div>
@@ -62,7 +62,7 @@
                                         <span class="input-error-box text-danger" id="contentValidation"></span>
                                     </div>
                                 </div>
-                                
+
                             </div>
                         </div>
                         <div class="row">
@@ -81,6 +81,7 @@
         </div>
     </div>
 </div>
+
 @section Scripts
 {
     <script src="@Url.Content("~/Scripts/Admin/emailTemplate.js")"></script>
