--- a/170516/Views/Administrator/AddSupplier.cshtml
+++ b/170516/Views/Administrator/AddSupplier.cshtml
@@ -5,139 +5,140 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row">
-<div class="col-md-12">
-    <div class="main-content-wrapper">
-        <div class="container-fluid">
-            @*nav bar*@
-            <ol class="breadcrumb">
-                <li><a href="@Url.Action("ViewSupplier","Administrator")">Quản lý nhà cung cấp</a></li>
-                <li class="active">Tạo nhà cung cấp</li>
-            </ol>
-            <div class="container-fluid admin-header">
-                <div class="title col-md-6 col-xs-6"><h3>Tạo nhà cung cấp mới</h3></div>
+<div class="container">
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="btn-group pull-right m-t-5 m-b-20">
+
             </div>
+            <h4 class="page-title">Đăng ký nhà phân phối mới</h4>
         </div>
-        <div class="container-fluid">
-            @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "addSupplierForm" }))
-            {                
-                <div class="form-horizontal">
-                    <div class="row">
-                        @Html.ValidationSummary(true)
-                        <div class="col-md-8 col-lg-8">                            
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="CompanyName">Tên công ty <span class="text-danger">*</span></label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.CompanyName, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.CompanyName, null, new { @class = "input-error-box text-danger" })
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card-box">
+                @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "addSupplierForm" }))
+                {
+                    <div class="form-horizontal">
+                        <div class="row">
+                            @Html.ValidationSummary(true)
+                            <div class="col-md-8 col-lg-8">
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="CompanyName">Tên công ty <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.CompanyName, new { @class = "form-control" }) <span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.CompanyName, null, new { @class = "input-error-box text-danger" })
+                                    </div>
                                 </div>
-                            </div>                            
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="ContactFName">Họ người liên hệ <span class="text-danger">*</span></label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.ContactFName, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.ContactFName, null, new { @class = "input-error-box text-danger" })
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="ContactFName">Họ người liên hệ <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.ContactFName, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.ContactFName, null, new { @class = "input-error-box text-danger" })
+                                    </div>
                                 </div>
-                            </div>
-                            
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="ContactLName">Tên người liên hệ <span class="text-danger">*</span></label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.ContactLName, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.ContactLName, null, new { @class = "input-error-box text-danger" })
+
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="ContactLName">Tên người liên hệ <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.ContactLName, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.ContactLName, null, new { @class = "input-error-box text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="Address1">Địa chỉ 1 <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.Address1, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.Address1, null, new { @class = "input-error-box text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="Address2">Địa chỉ 2</label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.Address2, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.Address2, null, new { @class = "input-error-box text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="City">Tỉnh/Thành phố <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.City, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.City, null, new { @class = "input-error-box text-danger" })
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="Phone">Số điện thoại <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.Phone, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.Phone, null, new { @class = "input-error-box text-danger" })
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="Fax">Fax </label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.Fax, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.Fax, null, new { @class = "input-error-box text-danger" })
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="EmailAddress">Địa chỉ email <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.EmailAddress, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.EmailAddress, null, new { @class = "input-error-box text-danger" })
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="Discount">Giảm giá <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.Discount, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.Discount, null, new { @class = "input-error-box text-danger" })
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-3 control-label" for="ProductType">Loại sản phẩm <span class="text-danger">*</span></label>
+                                    <div class="col-sm-7">
+                                        @Html.TextBoxFor(model => model.ProductType, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
+                                        @Html.ValidationMessageFor(model => model.ProductType, null, new { @class = "input-error-box text-danger" })
+                                    </div>
                                 </div>
                             </div>
 
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Address1">Địa chỉ 1 <span class="text-danger">*</span></label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.Address1, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.Address1, null, new { @class = "input-error-box text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Address2">Địa chỉ 2</label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.Address2, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.Address2, null, new { @class = "input-error-box text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="City">Tỉnh/Thành phố <span class="text-danger">*</span></label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.City, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.City, null, new { @class = "input-error-box text-danger" })
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Phone">Số điện thoại <span class="text-danger">*</span></label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.Phone, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.Phone, null, new { @class = "input-error-box text-danger" })
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Fax">Fax </label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.Fax, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.Fax, null, new { @class = "input-error-box text-danger" })
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="EmailAddress">Địa chỉ email <span class="text-danger">*</span></label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.EmailAddress, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.EmailAddress, null, new { @class = "input-error-box text-danger" })
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="Discount">Giảm giá <span class="text-danger">*</span></label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.Discount, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.Discount, null, new { @class = "input-error-box text-danger" })
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label" for="ProductType">Loại sản phẩm <span class="text-danger">*</span></label>
-                                <div class="col-sm-7">
-                                    @Html.TextBoxFor(model => model.ProductType, new { @class = "form-control" })<span class="input-error-box text-danger"></span>
-                                    @Html.ValidationMessageFor(model => model.ProductType, null, new { @class = "input-error-box text-danger" })
+                            <div class="col-md-4 col-lg-4">
+                                <div class="form-group">
+                                    <label class="control-label">Logo của nhà cung cấp</label>
+                                    <!-- IMAGE -->
+                                    <div class="image-upload-box">
+                                        <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
+                                        <div id="ImagePreviewBox" class="preview-box" style="max-width:80%;"></div>
+                                        <input id="ImageUpload" type="file" class="image-file-input" name="ImageUpload" />
+                                        <input id="SupplierImage" type="hidden" name="Logo" />
+                                        <h5 id="ImageName" class="image-name"></h5>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-md-4 col-lg-4">
-                            <div class="form-group">
-                                <label class="control-label">Logo của nhà cung cấp</label>
-                                <!-- IMAGE -->
-                                <div class="image-box">
-                                    <img id="ImageBox" src="~/Content/Image/image_placeholder.jpg" class="image-box" />
-                                    <div id="ImagePreviewBox" class="preview-box" style="max-width:80%;"></div>
-                                    <input id="ImageUpload" type="file" class="image-file-input" name="ImageUpload" />
-                                    <input id="SupplierImage" type="hidden" name="Logo" />
-                                    <h5 id="ImageName" class="image-name"></h5>
+                        <div class="row">
+                            <div class="col-md-12 col-lg-12">
+                                <div class="form-group">
+                                    <div class="col-md-12 form-button">
+                                        <button class="btn btn-primary" type="button" id="SubmitAddSupplier"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
+                                        <button class="btn btn-danger" type="reset"><i class="glyphicon glyphicon-remove"></i>Làm mới</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-12 col-lg-12">
-                            <div class="form-group">
-                                <div class="col-md-12 form-button">
-                                    <button class="btn btn-primary" type="button" id="SubmitAddSupplier"><i class="glyphicon glyphicon-floppy-disk"></i> Lưu</button>
-                                    <button class="btn btn-danger" type="reset"><i class="glyphicon glyphicon-remove"></i>Làm mới</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
+                }
+            </div>
         </div>
     </div>
 </div>
-</div>
+
 @section Scripts
 {
     <script src="@Url.Content("~/Scripts/Admin/supplier.js")"></script>
