--- a/170516/Views/Administrator/UpdateEmailTemplate.cshtml
+++ b/170516/Views/Administrator/UpdateEmailTemplate.cshtml
@@ -4,20 +4,19 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="btn-group pull-right m-t-5 m-b-20">
 
-<div class="row">
-    <div class="col-md-12">
-        <div class="main-content-wrapper">
-            <div class="panel-heading">
-                <ol class="breadcrumb">
-                    <li><a href="@Url.Action("ViewEmailTemplate","Administrator")">Quản lý mẫu email</a></li>
-                    <li class="active">Chỉnh sửa mẫu email</li>
-                </ol>
-                <div class="container-fluid admin-header">
-                    <div class="title col-md-6 col-xs-6"><h3>Chỉnh sửa mẫu email</h3></div>
-                </div>
             </div>
-            <div class="container-fluid">
+            <h4 class="page-title">Cập nhật mẫu email</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="card-box">
                 @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "updateEmailTemplateForm" }))
                 {
                     @Html.HiddenFor(model => model.EmailTemplateId)
@@ -48,7 +47,7 @@
                                         }
                                     </div>
                                 </div>
-                               
+
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label" for="">Nội dung<span class="text-danger">*</span></label>
                                     <div class="col-sm-9">
@@ -56,7 +55,7 @@
                                             @Html.TextAreaFor(model => model.HtmlTextContent, new { @class = "tiny_mce_input form-control", @id = "txtA_htmlVersion", @style = "height:250px", maxlength = 5000 })
                                             @Html.ValidationMessageFor(model => model.HtmlTextContent)
                                         </div>
-                                       
+
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -84,6 +83,7 @@
         </div>
     </div>
 </div>
+
 @section Scripts
 {
     <script src="@Url.Content("~/Scripts/Admin/emailTemplate.js")"></script>
