--- a/170516/Views/Administrator/ViewEmailTemplate.cshtml
+++ b/170516/Views/Administrator/ViewEmailTemplate.cshtml
@@ -4,33 +4,29 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-
 <div class="container">
+
     <div class="row">
         <div class="col-sm-12">
+            <div class="btn-group pull-right m-t-5 m-b-20">
+                <a href="@Url.Action("AddEmailTemplate","Administrator")" class="btn btn-custom dropdown-toggle waves-effect waves-light">Thêm mẫu email <span class="m-l-5"><i class="fa fa-plus"></i></span></a>
+            </div>
             <h4 class="page-title">Quản lý mẫu email</h4>
         </div>
     </div>
+
     <div class="row">
         <div class="col-sm-12">
             <div class="card-box table-responsive">
-                <div class="container-fluid admin-header">
-                    <h4 class="header-title m-t-0 m-b-30 col-md-10 col-xs-10">Danh sách mẫu email</h4>
-                    <div class="col-md-2 col-xs-2">
-                        <a id="addBtn" href="@Url.Action("AddEmailTemplate", "Administrator")" class="btn btn-primary btn-sm add-button"><i class="glyphicon glyphicon-plus"></i> Thêm</a>
-                    </div>
-                </div>
-                    
                 <div class="data-table-wrapper form-inline dt-bootstrap no-footer">
                     @if (Model.Templates.Any())
                     {
+                        <h4 class="header-title m-t-0 m-b-30">Danh sách mẫu email</h4>
                         <div class="row">
                             <div class="col-sm-6">
-                                <input type="hidden" id="dataTables_sort_field_hidden" value="@Model.SortField" />
-                                <input type="hidden" id="dataTables_sort_direction_hidden" value="@Model.IsAsc" />
                                 <div class="filter-wrapper">
                                     <label>
-                                        Hiển thị <select id="dataTables_showNumberSelectEmailTemplate" aria-controls="dataTables-example" class="form-control input-sm">
+                                        Hiển thị <select id="dataTables_showNumberSelect" aria-controls="dataTables-example" class="form-control input-sm">
                                             @if (Model.ItemOnPage == 10)
                                             {
                                                 <option value="10" selected>10</option>
@@ -70,11 +66,11 @@
                                 <div class="search-wrapper">
                                     @if (string.IsNullOrWhiteSpace(Model.SearchText))
                                     {
-                                        <label><button type="button" id="dataTables_searchEmailTemplate" class="btn btn-default btn-sm"><i class="fa fa-search"></i></button> <input type="search" id="dataTables_show_item_search" class="form-control input-sm" placeholder="" aria-controls="datatable-fixed-header" /></label>
+                                        <label><button type="button" id="dataTables_search" class="btn btn-default btn-sm"><i class="fa fa-search"></i></button> <input type="search" id="dataTables_show_item_search" class="form-control input-sm" placeholder="" aria-controls="datatable-fixed-header"></label>
                                     }
                                     else
                                     {
-                                        <label><button type="button" id="dataTables_searchEmailTemplate" class="btn btn-default btn-sm"><i class="fa fa-search"></i></button> <input type="search" id="dataTables_show_item_search" value="@Model.SearchText" class="form-control input-sm" placeholder="" aria-controls="datatable-fixed-header" /></label>
+                                        <label><button type="button" id="dataTables_search" class="btn btn-default btn-sm"><i class="fa fa-search"></i></button> <input type="search" id="dataTables_show_item_search" value="@Model.SearchText" class="form-control input-sm" placeholder="" aria-controls="datatable-fixed-header"></label>
                                     }
                                 </div>
                             </div>
@@ -82,7 +78,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="table-wrapper">
-                                    <table class="table table-striped dt-responsive nowrap no-footer dtr-inline" id="dataTable_emailTemplate" role="grid">
+                                    <table class="table table-striped dt-responsive nowrap no-footer dtr-inline" role="grid">
                                         <tbody>
                                             @for (var i = 1; i <= Model.Templates.Count; i++)
                                             {
@@ -106,7 +102,7 @@
                                                 {
                                                     <tr class="odd" role="row">
                                                         <td>@i</td>
-                                                        <td></td>                  
+                                                        <td></td>
                                                         <td></td>
                                                         <td></td>
                                                         <td></td>
@@ -131,7 +127,7 @@
                                                 else
                                                 {
                                                     <th class="center" tabindex="0" rowspan="1" data-sort="EmailTemplateName" data-direction="asc" colspan="1">Tên mẫu email <i class="fa fa-fw fa-sort-asc"></i></th>
-                                                }                                                
+                                                }
                                                 @if (Model.SortField.Equals("CreatedByUsername"))
                                                 {
                                                     if (Model.IsAsc)
@@ -186,7 +182,7 @@
                                         else
                                         {
                                             <li class="paginate_button previous" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
-                                                <a href="@Url.Action("ViewEmailTemplate", "Administrator", new {page = Model.CurrentPage - 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Trước</a>
+                                                <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage - 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Trước</a>
                                             </li>
                                         }
 
@@ -197,13 +193,13 @@
                                                 if (i == 0)
                                                 {
                                                     <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
-                                                        <a href="@Url.Action("ViewEmailTemplate", "Administrator", new {page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">@((Model.CurrentPage + i).ToString())</a>
+                                                        <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">@((Model.CurrentPage + i).ToString())</a>
                                                     </li>
                                                 }
                                                 else
                                                 {
                                                     <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
-                                                        <a href="@Url.Action("ViewEmailTemplate", "Administrator", new { page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage + i).ToString())</a>
+                                                        <a href="@Url.Action("ViewProduct", "Administrator", new { page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage + i).ToString())</a>
                                                     </li>
                                                 }
                                             }
@@ -218,7 +214,7 @@
                                         else
                                         {
                                             <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
-                                                <a href="@Url.Action("ViewEmailTemplate", "Administrator", new {page = Model.CurrentPage + 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Sau</a>
+                                                <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage + 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Sau</a>
                                             </li>
                                         }
                                     </ul>
@@ -228,13 +224,15 @@
                     }
                     else
                     {
-                        <h5>Không có record nào được lưu trong cơ sở dữ liệu.</h5>
+                        <h5>Không có sản phẩm nào được lưu trong cơ sở dữ liệu. Vui lòng tạo sản phẩm mới tại <a href="@Url.Action("AddProduct", "Administrator")">đây</a></h5>
                     }
+
                 </div>
             </div>
-        </div>
+        </div><!-- end col -->
     </div>
 </div>
+
 
 @section Scripts
 {
