--- a/170516/Views/Administrator/ViewRequest.cshtml
+++ b/170516/Views/Administrator/ViewRequest.cshtml
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="card-box table-responsive">
-                <h4 class="header-title m-t-0 m-b-30">Danh sách feedback từ khách hàng @Constant</h4>
+                <h4 class="header-title m-t-0 m-b-30">Danh sách feedback từ khách hàng</h4>
 
                 <div class="data-table-wrapper form-inline dt-bootstrap no-footer">
                     @if (Model.Requests.Any())
